man_MANS = libmicrohttpd.3
EXTRA_DIST = $(man_MANS) Doxyfile 

DISTCLEANFILES = \
  libmicrohttpd.cps \
  libmicrohttpd.dvi \
  libmicrohttpd-tutorial.cps \
  libmicrohttpd-tutorial.dvi
info_TEXINFOS = \
  libmicrohttpd.texi \
  libmicrohttpd-tutorial.texi
microhttpd_TEXINFOS = \
  chapters/basicauthentication.inc \
  chapters/bibliography.inc \
  chapters/exploringrequests.inc \
  chapters/hellobrowser.inc \
  chapters/introduction.inc \
  chapters/largerpost.inc \
  chapters/processingpost.inc \
  chapters/responseheaders.inc \
  chapters/tlsauthentication.inc \
  chapters/sessions.inc \
  examples/basicauthentication.c \
  examples/hellobrowser.c \
  examples/largepost.c \
  examples/logging.c \
  examples/responseheaders.c \
  examples/simplepost.c \
  examples/tlsauthentication.c \
  examples/sessions.c \
  fdl-1.3.texi \
  lgpl.texi \
  ecos.texi

